other-cel/limit-hostpath-type-pv/limit-hostpath-type-pv.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: limit-hostpath-type-pv
  annotations:
    policies.kyverno.io/title: Limit hostPath PersistentVolumes to Specific Directories in CEL expressions
    policies.kyverno.io/category: Other in CEL 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: PersistentVolume
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      hostPath persistentvolumes consume the underlying node's file system. If hostPath volumes
      are not to be universally disabled, they should be restricted to only certain
      host paths so as not to allow access to sensitive information. This policy ensures
      the only directory that can be mounted as a hostPath volume is /data.
spec:
  background: false
  validationFailureAction: Audit
  rules:
  - name: limit-hostpath-type-pv-to-slash-data
    match:
      any:
      - resources:
          kinds:
          - PersistentVolume
    validate:
      cel: 
        expressions:
          - expression: "!has(object.spec.hostPath) || object.spec.hostPath.path.startsWith('/data')"
            message: hostPath type persistent volumes are confined to /data.
