other-cel/limit-hostpath-type-pv/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-hostpath-type-pv
policies:
- ../limit-hostpath-type-pv.yaml
resources:
- resource.yaml
results:
- kind: PersistentVolume
  policy: limit-hostpath-type-pv
  resources:
  - bad-pv
  result: fail
  rule: limit-hostpath-type-pv-to-slash-data
- kind: PersistentVolume
  policy: limit-hostpath-type-pv
  resources:
  - good-pv
  result: pass
  rule: limit-hostpath-type-pv-to-slash-data
